Fixed bug #34276 (setAttributeNS doesn't work with default namespace) Add test